classDiagram

    class BaseModel {

    }
    class BaseModelWithLocation {

    }

    class Resort {

    }

    class Park {

    }

    class ParkType {
        string name
        string description
    }



    BaseModel <|-- BaseModelWithLocation
    BaseModelWithLocation <|-- Resort
    BaseModelWithLocation <|-- Park
    Resort -- Park
    Resort -- Restaurant
    Park -- ParkType

